# rt-soldering-iron

./: .gitignore  README.md
rust/: .gitignore  Cargo.toml  Makefile.toml  README.md  STM32F031X6.ld  Xargo.toml
rust/.cargo/: config
rust/components/bare-take-mut/: Cargo.toml
rust/components/bare-take-mut/src/: lib.rs
rust/components/board-support/: Cargo.toml
rust/components/board-support/src/: buzzer.rs  lib.rs  ssd1306.rs  systick.rs
rust/components/nb-sync/: Cargo.toml
rust/components/nb-sync/src/: lib.rs  mpsc.rs
rust/components/rtos/: Cargo.toml  README.md
rust/components/rtos/src/: sched.rs  sync.rs  tasks.rs
rust/components/stm32f031x/: Cargo.toml  STM32F031x.svd  device.x  rustfmt.toml
rust/components/stm32f031x-hal/: Cargo.toml
rust/components/stm32f031x-hal/src/: adc.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  pwm.rs  rcc.rs  time.rs  timer.rs
rust/components/stm32f031x/src/: lib.rs
rust/components/stm32f031x/src/crc/cr/: mod.rs
rust/components/stm32f031x/src/crc/dr/: mod.rs
rust/components/stm32f031x/src/crc/idr/: mod.rs
rust/components/stm32f031x/src/crc/init/: mod.rs
rust/components/stm32f031x/src/dbgmcu/apbhfz/: mod.rs
rust/components/stm32f031x/src/dbgmcu/apblfz/: mod.rs
rust/components/stm32f031x/src/dma/cmar1/: mod.rs
rust/components/stm32f031x/src/dma/cmar2/: mod.rs
rust/components/stm32f031x/src/dma/cmar3/: mod.rs
rust/components/stm32f031x/src/dma/cmar4/: mod.rs
rust/components/stm32f031x/src/dma/cmar5/: mod.rs
rust/components/stm32f031x/src/dma/cmar6/: mod.rs
rust/components/stm32f031x/src/dma/cmar7/: mod.rs
rust/components/stm32f031x/src/dma/cndtr1/: mod.rs
rust/components/stm32f031x/src/dma/cndtr2/: mod.rs
rust/components/stm32f031x/src/dma/cndtr3/: mod.rs
rust/components/stm32f031x/src/dma/cndtr4/: mod.rs
rust/components/stm32f031x/src/dma/cndtr5/: mod.rs
rust/components/stm32f031x/src/dma/cndtr6/: mod.rs
rust/components/stm32f031x/src/dma/cndtr7/: mod.rs
rust/components/stm32f031x/src/dma/cpar1/: mod.rs
rust/components/stm32f031x/src/dma/cpar2/: mod.rs
rust/components/stm32f031x/src/dma/cpar3/: mod.rs
rust/components/stm32f031x/src/dma/cpar4/: mod.rs
rust/components/stm32f031x/src/dma/cpar5/: mod.rs
rust/components/stm32f031x/src/dma/cpar6/: mod.rs
rust/components/stm32f031x/src/dma/cpar7/: mod.rs
rust/components/stm32f031x/src/exti/pr/: mod.rs
rust/components/stm32f031x/src/flash/acr/: mod.rs
rust/components/stm32f031x/src/flash/obr/: mod.rs
rust/components/stm32f031x/src/flash/wrpr/: mod.rs
rust/components/stm32f031x/src/gpioa/afrh/: mod.rs
rust/components/stm32f031x/src/gpioa/afrl/: mod.rs
rust/components/stm32f031x/src/gpioa/lckr/: mod.rs
rust/components/stm32f031x/src/gpioa/moder/: mod.rs
rust/components/stm32f031x/src/gpioa/odr/: mod.rs
rust/components/stm32f031x/src/gpioa/ospeedr/: mod.rs
rust/components/stm32f031x/src/gpiof/lckr/: mod.rs
rust/rt-soldering-iron/: Cargo.toml  Makefile.toml  build.rs
rust/rt-soldering-iron/scripts/: artifact-runner.py  embedded.py  flash.cfg  flash.sh  objcopy.sh
rust/rt-soldering-iron/src/: debug.rs  main.rs  rtos.rs
rust/rt-soldering-iron/src/rtos/: README.md  mod.rs  sched.rs  sync.rs  tasks.rs
rust/rtos/src/: lib.rs
rust/scripts/: embedded.py  objdump.sh
rust/src/: board.rs  debug.rs  font.rs  gfx.rs  main.rs  pid.rs
rust/stm32f031x/: Cargo.toml
rust/stm32f031x/src/: lib.rs
(+161 files in other folders)
