[package]
name = "rt-soldering-iron"
version = "0.1.0"
authors = ["Kevin Cuzner <kevin@kevincuzner.com>"]

[dependencies]
cortex-m = "0.4.0"
cortex-m-semihosting = "0.2.0"
bare-metal = "0.1.0"
nb = "0.1.1"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.stm32f031x]
features = ["rt"]
path = "./components/stm32f031x"
version = "0.2.0"

[dependencies.stm32f031x-hal]
path = "./components/stm32f031x-hal"

[dependencies.rtos]
path = "./components/rtos"

[profile.release]
debug = true
lto = true

