[package]
authors = ["Kevin Cuzner <kevin@kevincuzner.com>"]
name = "board-support"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.0"
nb = "0.1.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.stm32f031x-hal]
path = "../stm32f031x-hal"

[dependencies.stm32f031x]
features = ["rt"]
path = "../stm32f031x"

[dependencies.bare-take-mut]
path = "../bare-take-mut"

